does not compile WITH_MOD_SMOKE disabled #49445

Closed
opened 2016-09-25 00:16:38 +02:00 by Jaume Bellet · 5 comments

System Information
Debian 8.1 x64

Blender Version
Revision: 14e825a
Author: Kévin Dietrich

Short description of error

Disable WITH_MOD_SMOKE

compile fails
/home/jaume/src/blender-git/blender/source/blender/editors/space_view3d/drawvolume.c:658: error: undefined reference to 'smoke_get_velocity_x'

**System Information** Debian 8.1 x64 **Blender Version** Revision: 14e825a Author: Kévin Dietrich **Short description of error** Disable WITH_MOD_SMOKE compile fails /home/jaume/src/blender-git/blender/source/blender/editors/space_view3d/drawvolume.c:658: error: undefined reference to 'smoke_get_velocity_x'
Kévin Dietrich was assigned by Jaume Bellet 2016-09-25 00:16:38 +02:00
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JaumeBellet

Added subscriber: @JaumeBellet

This issue was referenced by d35bf3f421

This issue was referenced by d35bf3f421fe4166f5275067cc71e92465f1b954

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks ;)

Although i think a better solution was #define out the whole func and it's calls ¿?

Thanks ;) Although i think a better solution was #define out the whole func and it's calls ¿?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49445
No description provided.