Fix compile error when building without smoke support.

Also fixes possible NULL pointer dereference.

Fixes T49445.